[package]
name = "gradient-noise-wasm"
version = "0.1.0"
edition = "2021"
description = "High-performance gradient generator built with Rust and WebAssembly"
repository = "https://github.com/LandoNikko/Gradient-Generator"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
rayon = "1.7"
wide = "0.7"
futures = "0.3"
wasm-bindgen-futures = "0.4"
async-trait = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "ImageData",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
]

# Optimization profiles
[profile.release]
opt-level = "s"        # Optimize for size
lto = true            # Link Time Optimization
codegen-units = 1     # Better optimization
panic = "abort"       # Smaller binary size
strip = true          # Strip debug symbols